# ai-orchestration

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml
docs/: REMOTE-CONTROL.md  TESTING-TELEGRAM.md
examples/sample_flutter_app/: README.md  flutter-checkout.yaml  pubspec.yaml  workflow.yaml
examples/sample_flutter_app/android/app/: build.gradle.kts
examples/sample_flutter_app/ios/Runner.xcodeproj/: project.pbxproj
examples/sample_flutter_app/linux/: CMakeLists.txt
examples/sample_flutter_app/macos/Runner.xcodeproj/: project.pbxproj
examples/sample_flutter_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
examples/sample_flutter_app/macos/Runner/Configs/: AppInfo.xcconfig
examples/sample_flutter_app/test/: widget_test.dart
examples/sample_flutter_app/windows/runner/: Runner.rc
examples/workflows/: flutter-checkout.yaml
src/em/: __init__.py  cli.py  config.py  doctor.py  examples_data.py  models.py  monitor.py  platform_paths.py  scheduler.py  state.py  workflow.py
src/em/adapters/: __init__.py  base.py  claude.py  codex.py  cursor.py  gemini.py  mock.py  registry.py  shell.py
src/em/data/: __init__.py
src/em/data/examples/: __init__.py  flutter-checkout.yaml  mock-feature.yaml  real-agents.yaml
src/em/notify/: __init__.py  approvals.py  asks.py  telegram.py
tests/: test_config_notify.py  test_cursor_adapter.py  test_doctor.py  test_examples.py  test_human_ask.py  test_scheduler.py  test_state.py  test_workflow.py
(+1 files in other folders)
