[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "em"
version = "0.1.0"
description = "Engineering Manager — orchestrate multi-agent coding workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12",
]

[project.optional-dependencies]
cursor = ["cursor-sdk>=0.1"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
em = "em.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
